<resources>
    <string name="app_name">UniReservasApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Correo electronico</string>
    <string name="password_hint">Password</string>
    <string name="forgot_pass">Olvido su contraseña?</string>
    <string name="button_login_text">Ingresar</string>
    <string name="email_error">Correo no valido</string>
    <string name="password_error">Contraseña no valida</string>
    <string name="name_hint">Nombre</string>
    <string name="radio_label_m">Msculino</string>
    <string name="radio_label_f">Femenino</string>
    <string name="radio_label_o">Otro</string>
    <string name="button_signup_text">Registrarse</string>
    <string name="title_toolbar_home">Ubicaciones</string>
    <string name="title_toolbar_search">Buscar</string>
    <string name="title_toolbar_qr">Escanear</string>
    <string name="title_toolbar_profile">Perfil</string>
    <string name="label_btn_qr">Escanear cancha</string>
    <string name="title_item_category_location">Popayán - Cauca</string>
    <string name="txt_search_locate">Buscar Ubicación</string>
    <string name="btn_watch_escenarios">ESCENARIOS DEPORTIVOS</string>
    <string name="btn_watch_reservar">Reservar</string>
    <string name="txt_search_escenario">Buscar Escenario</string>
    <string name="title_calendar_reservas">Reservas</string>
    <string name="label_about">Acerca de</string>
    <string name="text_id_sing_up">Identificacion</string>
    <string name="cod_signup">Codigo</string>
</resources>