<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/locationFragment">

    <fragment
        android:id="@+id/locationFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.LocationFragment"
        android:label="@string/title_toolbar_home"
        tools:layout="@layout/fragment_location" >
        <action
            android:id="@+id/action_locationFragment_to_escenarioFragment"
            app:destination="@id/escenarioFragment" />
        <action
            android:id="@+id/action_locationFragment_to_infoCategoriaFragment"
            app:destination="@id/infoCategoriaFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.SearchFragment"
        android:label="@string/title_toolbar_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/qrFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.QrFragment"
        android:label="@string/title_toolbar_qr"
        tools:layout="@layout/fragment_qr" >
        <action
            android:id="@+id/action_qrFragment_to_locationFragment"
            app:destination="@id/locationFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/locationFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_qrFragment_to_infoQrFragment"
            app:destination="@id/infoQrFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.ProfileFragment"
        android:label="@string/title_toolbar_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/infoQrFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.InfoQrFragment"
        android:label="Informacion de la busqueda"
        tools:layout="@layout/fragment_info_qr">
        <action
            android:id="@+id/action_infoQrFragment_to_qrFragment"
            app:destination="@id/qrFragment" />
        <action
            android:id="@+id/action_infoQrFragment_to_calendarReservasFragment"
            app:destination="@id/calendarReservasFragment"
            app:popUpTo="@id/qrFragment" />
    </fragment>
    <fragment
        android:id="@+id/escenarioFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.EscenarioFragment"
        android:label="Escenarios">
        <action
            android:id="@+id/action_escenarioFragment_to_infoEscenarioFragment"
            app:destination="@id/infoEscenarioFragment" />
        <argument
            android:name="ubicacion"
            app:argType="co.edu.unicauca.lottieapp.data.model.categoriaResponse" />
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_escenarioFragment_to_calendarReservasFragment"
            app:destination="@id/calendarReservasFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoCategoriaFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.InfoCategoriaFragment"
        android:label="Información Ubicación"
        tools:layout="@layout/fragment_info_categoria">
        <argument
            android:name="categoria"
            app:argType="co.edu.unicauca.lottieapp.data.model.categoriaResponse" />
    </fragment>
    <fragment
        android:id="@+id/infoEscenarioFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.InfoEscenarioFragment"
        android:label="Información Escenario"
        tools:layout="@layout/fragment_info_escenario" />
    <fragment
        android:id="@+id/calendarReservasFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.CalendarReservasFragment"
        android:label="Calendario de reservas">
        <action
            android:id="@+id/action_calendarReservasFragment_to_escenarioFragment"
            app:destination="@id/escenarioFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/escenarioFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_calendarReservasFragment_to_formReservaFragment"
            app:destination="@id/formReservaFragment" />
    </fragment>
    <fragment
        android:id="@+id/acercaFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.AcercaFragment"
        android:label="Acerca de nosotros"
        tools:layout="@layout/fragment_acerca" />
    <fragment
        android:id="@+id/formReservaFragment"
        android:name="co.edu.unicauca.lottieapp.ui.fragments.FormReservaFragment"
        android:label="Información de la reserva"
        tools:layout="@layout/fragment_form_reserva">
        <action
            android:id="@+id/action_formReservaFragment_to_calendarReservasFragment"
            app:destination="@id/calendarReservasFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/calendarReservasFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>